docker/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-staging
  namespace: vshn-demoapp1
  labels:
    app: webserver-staging
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
spec:
  ports:
    -
      name: 9000-tcp
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: webserver-staging
    deploymentconfig: webserver-staging
  portalIP: 172.30.215.173
  clusterIP: 172.30.215.173
  type: ClusterIP
  sessionAffinity: None
