docker/openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: webserver
  namespace: vshn-demoapp1
  selfLink: /oapi/v1/namespaces/vshn-demoapp1/routes/webserver
  uid: 7d35c38f-f518-11e6-b5f7-fa163e3ec73a
  labels:
    app: webserver
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: webserver-vshn-demoapp1.appuioapp.ch
  to:
    kind: Service
    name: webserver
    weight: 100
  port:
    targetPort: 9000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
status:
  ingress:
    -
      host: webserver-vshn-demoapp1.appuioapp.ch
      routerName: ha-router-zrh
      conditions:
        -
          type: Admitted
          status: 'True'
          lastTransitionTime: '2017-02-17T13:53:41Z'
